# postpub

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  README.md
.nezha/: config.toml
AIWriteX/: README.md  pyproject.toml  requirements.txt
AIWriteX/src/ai_write_x/: crew_main.py
AIWriteX/src/ai_write_x/config/: aiforge.toml  config.py  config.yaml
AIWriteX/src/ai_write_x/core/: agent_factory.py
AIWriteX/src/ai_write_x/web/: app.py
AIWriteX/src/ai_write_x/web/api/: config.py
AIWriteX/src/ai_write_x/web/static/js/: article-manager.js  config-manager.js
apps/desktop/: Cargo.toml
apps/desktop/src/: main.rs
apps/web-launcher/: Cargo.toml
apps/web-launcher/src/: main.rs
crates/postpub-agent-browser/: Cargo.toml  build.rs
crates/postpub-agent-browser/src/: commands.rs  main.rs  output.rs
crates/postpub-agent-browser/src/native/: actions.rs  browser.rs  mod.rs
crates/postpub-agent-browser/src/native/stream/: http.rs  mod.rs
crates/postpub-api/: Cargo.toml
crates/postpub-api/src/: error.rs  lib.rs  routes.rs  state.rs
crates/postpub-api/tests/: api_flows.rs
crates/postpub-core/: Cargo.toml
crates/postpub-core/src/: aiforge.rs  articles.rs  browser.rs  config.rs  error.rs  generation.rs  lib.rs  llm.rs  paths.rs  publish.rs  templates.rs  text.rs
crates/postpub-core/src/publish/: mod.rs  runtime.rs  service.rs  wechat.rs
crates/postpub-types/: Cargo.toml
crates/postpub-types/src/: lib.rs
docs/: bundled-browser.md  migration-notes-from-aiwritex.md  rust-tauri-axum-architecture.md  rust-tauri-axum-implementation-plan-2026-03-29.md  wechat-official-account-draft-workflow.md
docs/platform/: wechat.md
frontend/: i18n.config.cjs  index.html  package-lock.json  package.json  vite.config.js  vitest.config.ts
frontend/public/demo/: reference-rust-publish.html  reference-rust-search.html  reference-rust-workflow.html
frontend/src/: App.test.ts  App.vue  env.d.ts  main.ts  style.css  vite-env.d.ts
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/: TemplateMonacoEditor.vue
frontend/src/host/: browser.ts  index.ts  types.ts
frontend/src/locales/: en-US.json  zh-CN.json
frontend/src/router/: index.ts
frontend/src/stores/: app.ts  articles.ts  config.test.ts  config.ts  generation.test.ts  generation.ts  locale.ts  navigation.ts  publish.test.ts  publish.ts  templates.ts
frontend/src/types/: postpub.ts
frontend/src/utils/: i18n.ts  preview.ts  template-preview.test.ts  template-preview.ts
frontend/src/views/: ArchitectureView.vue  ArticlesView.vue  ConfigView.vue  GenerationTasksView.vue  GenerationView.vue  OverviewView.vue  PublishTasksView.vue  TaskStatusView.vue  TemplatesView.vue
