[workspace]
resolver = "2"
members = [
    "crates/postpub-types",
    "crates/postpub-core",
    "crates/postpub-agent-browser",
    "crates/postpub-api",
    "apps/desktop",
    "apps/web-launcher",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "UNLICENSED"

[workspace.dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
include_dir = "0.7"
futures = "0.3"
http = "1"
pulldown-cmark = "0.13"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "json", "rustls-tls"] }
rss = "2"
scraper = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["fs"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
zip = "2"
