[package]
name = "postpub-web-launcher"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
postpub-api = { path = "../../crates/postpub-api" }
postpub-core = { path = "../../crates/postpub-core" }
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
