[package]
name = "postpub-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
postpub-core = { path = "../postpub-core" }
postpub-types = { path = "../postpub-types" }
anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
chrono.workspace = true
futures.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tower = "0.5"
tempfile.workspace = true
