[package]
name = "postpub-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
postpub-types = { path = "../postpub-types" }
anyhow.workspace = true
async-trait.workspace = true
base64 = "0.22"
chrono.workspace = true
dirs.workspace = true
include_dir.workspace = true
encoding_rs = "0.8"
pulldown-cmark.workspace = true
regex.workspace = true
reqwest.workspace = true
rss.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
zip.workspace = true

[dev-dependencies]
tempfile.workspace = true
